--- a/index.html
+++ b/index.html
@@ -55,17 +55,15 @@
                 
                 <div class="row">
                     <span>A</span>
-                    <span>L</span>
+                    <span>l</span>
                     <span>-</span>
-                    <span>A</span>
-                    <span>H</span>
-                    <span>M</span>
-                    <span>A</span>
-                    <span>D</span>
-                    <span>G</span>
-                    <span>A</span>
-                    <span>I</span>
-                    <span>D</span>
+                    <span>C</span>
+                    <span>h</span>
+                    <span>u</span>
+                    <span>c</span>
+                    <span>h</span>
+                    <span>a</span>
+                    <span>y</span>
                 </div>
             </div>
         </div>
